--- a/html/css/style.css
+++ b/html/css/style.css
@@ -11,11 +11,15 @@ html, body {
 /*Navigatie Bar styles*/
 .navbar {
     padding: .8rem;
-    background-color: #3f3f3f !important;
 }
 .navbar-nav li{
     padding-right: 20px;
 }
+.logo{
+    height: 70px;
+    width: auto;
+}
+
 .nav-link {
     font-size: 1.1em !important;
 }
@@ -23,7 +27,7 @@ html, body {
 /*Carousel Styles*/
 .carousel-inner img{
     width: 100%;
-    height: 800px;
+    height: 500px;
 }
 .carousel-caption {
     position: absolute;
@@ -32,7 +36,6 @@ html, body {
 }
 .carousel-caption h1 {
     font-size: 500%;
-    text-transform: uppercase;
     text-shadow: 1px 1px 15px #000;
 }
 .carousel-caption h3 {
@@ -41,9 +44,15 @@ html, body {
     text-shadow: 1px 1px 10px #000;
     padding-bottom: 1rem;
 }
+.carousel-control-next{
+    justify-content: flex-end;
+}
+.carousel-control-prev{
+    justify-content: start;
+}
 .btn-primary{
-    background-color: #f2a521;
-    border: 1px solid #f2a521;
+    background-color: #67d136;
+    border: 1px solid #67d136;
 }
 .btn-primary:hover{
     background-color: #b73841;
