-styling + link button

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -55,8 +55,8 @@ html, body {
     border: 1px solid #67d136;
 }
 .btn-primary:hover{
-    background-color: #b73841;
-    border: 1px solid #b73841;
+    background-color: #ff8c00;
+    border: 1px solid #ff8c00;
 }
 
 /*Jumbotron*/
