--- a/html/css/style.css
+++ b/html/css/style.css
@@ -105,6 +105,11 @@ html, body {
     max-width: 100%;
 }
 
+/*Cards*/
+/*.card-img-top{*/
+    /*height: 500px!important;*/
+/*}*/
+
 /*Social links*/
 
 .social a {
