--- a/html/css/style.css
+++ b/html/css/style.css
@@ -141,7 +141,7 @@ html, body {
 
 /*footer*/
 footer {
-    background-color: #3f3f3f;
+    background-color: #000;
     color: #d5d5d5;
     padding-top: 2rem;
 }
